--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Simple site example">
     <link rel="stylesheet" href="./styles/layout.css">
-    <!--<link rel="stylesheet" href="./style.css">-->
+    <link rel="stylesheet" href="./style.css">
     <title>Entreprise&trade;</title>
 </head>
 <body>
