--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <h1>Entreprise</h1>
             </div>
             <nav class="nav-pages">
-                <a href="#">page1</a>
+                <a href="./pages/page1.html">page1</a>
                 <a href="#">page2</a>
                 <a href="#">page3</a>
                 <a href="#">page4</a>
