--- a/pages/page1.html
+++ b/pages/page1.html
@@ -1,1 +1,46 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Simple site example">
+    <link rel="stylesheet" href="../styles/layout.css">
+    <link rel="stylesheet" href="../styles/style.css">
+    <title>Entreprise&trade;</title>
+</head>
+<body>
+    <div class="page">
+        <header>
+            <div class="logo">
+                <svg
+                    width="50" height="50"
+                    xmlns="http://www.w3.org/2000/svg"
+                >
+                    <g stroke="rgba(0,0,0,.8)" stroke-width="2" fill="rgba(0,128,0,.2)">
+                        <rect x="5" y="5" width="40" height="40" />
+                    </g>
+                </svg>
+                <h1>Entreprise</h1>
+            </div>
+            <nav class="nav-pages">
+                <a href="./page1.html">page1</a>
+                <a href="#">page2</a>
+                <a href="#">page3</a>
+                <a href="#">page4</a>
+            </nav>
+        </header>
+        <main>
+          <pre><a href="../index.html">back to index</a></pre>
+          <article>
+            <h2>Page 1</h2>
+          </article>
+
+
+        </main>
+        <footer>
+            <p>Entreprise&copy;2024</p>
+        </footer>
+    </div>
+</body>
+</html>
 
