--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <style>
         .grid{
             border:4px solid blue;
+            width:100%;
             display:grid;
             grid-template-columns:repeat(auto-fit, minmax(200px, 1fr);
             justify-content:center
