--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
         .grid{
             border:4px solid blue;
             width:100%;
+            min-height:400px;
             display:grid;
             grid-template-columns:repeat(auto-fit, minmax(200px, 1fr);
+            grid-template-rows:auto;
             justify-content:center
         }
         .grid>div{
