--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             </nav>
         </header>
         <main>
-            <section>
+           <!--<section>
                 <h2>Grid</h2>
                 <div class="grid">
                     <div>
@@ -57,7 +57,7 @@
                         <article></article>
                     </div>
                 </div>                
-            </section>
+            </section>-->
         </main>
         <footer>
             <p>Entreprise&copy;2024</p>
