--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
                         <article class="article"></article>
                     </div>
                     <div class="item">
-                        <article></article>
-                        <article></article>
-                        <article></article>
-                        <article></article>
+                        <article class="article"></article>
+                        <article class="article"></article>
+                        <article class="article"></article>
+                        <article class="article"></article>
                     </div>
                     <div class="item">
                         <article class="article"></article>
