--- a/index.html
+++ b/index.html
@@ -32,29 +32,29 @@
            <section>
                 <h2>Grid</h2>
                 <div class="grid">
-                    <div class="item">
-                        <article class="article"></article>
-                        <article class="article"></article>
-                        <article class="article"></article>
-                        <article class="article"></article>
+                    <div>
+                        <article></article>
+                        <article></article>
+                        <article></article>
+                        <article></article>
                     </div>
-                    <div class="item">
-                        <article class="article"></article>
-                        <article class="article"></article>
-                        <article class="article"></article>
-                        <article class="article"></article>
+                    <div>
+                        <article></article>
+                        <article></article>
+                        <article></article>
+                        <article></article>
                     </div>
-                    <div class="item">
-                        <article class="article"></article>
-                        <article class="article"></article>
-                        <article class="article"></article>
-                        <article class="article"></article>
+                    <div>
+                        <article></article>
+                        <article></article>
+                        <article></article>
+                        <article></article>
                     </div>
-                    <div class="item">
-                        <article class="article"></article>
-                        <article class="article"></article>
-                        <article class="article"></article>
-                        <article class="article"></article>
+                    <div>
+                        <article></article>
+                        <article></article>
+                        <article></article>
+                        <article></article>
                     </div>
                 </div>                
             </section>
