--- a/index.html
+++ b/index.html
@@ -30,8 +30,9 @@
         </header>
         <main>
            <section>
+               <!-- edit in vscode -->
                 <h2>Grid</h2>
-                <div class="grid">
+                <!--<div class="grid">
                     <div>
                         <article></article>
                         <article></article>
@@ -56,7 +57,7 @@
                         <article></article>
                         <article></article>
                     </div>
-                </div>                
+                </div>-->             
             </section>
         </main>
         <footer>
